--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -697,7 +697,7 @@
                 </a>
             </li>
         </ul>
-        <a class="products__download button" href="">
+        <a class="products__button button" href="">
             Скачать каталог
         </a>
     </section>
@@ -785,7 +785,7 @@
         <div class="section__title questions__title">
             <div class="section__title_line"></div>
             <h2 class="questions__h2">
-                Отзывы клиентов
+                Часто задаваемые вопросы
             </h2>
         </div>
         <ol class="questions__list">
@@ -837,6 +837,293 @@
             Читать все
         </a>
     </section>
+
+    <section class="awards">
+        <div class="section__title awards__title">
+            <div class="section__title_line"></div>
+            <h2 class="awards__h2">
+                Наши награды
+            </h2>
+        </div>
+        <div class="awards__list">
+            <ul class="awards__list_inner">
+                <li class="awards__item">
+                    <div class="awards__item_image">
+                        <img src="/img/ifla.png" alt="ifla">
+                    </div>
+                    <div class="awards__item__text">
+                        <div class="awards__item_title">
+                            IFLA
+                        </div>
+                        <div class="awards__item_description">
+                            <strong>
+                                2017
+                            </strong>
+                            <strong>
+                                Ботанический сад “Кхаойаи”
+                            </strong>
+                            <span>
+                                Госпиталь
+                            </span>
+                        </div>
+                    </div>
+                </li>
+                <li class="awards__item">
+                    <div class="awards__item_image">
+                        <img src="/img/tala-professional-award.png" alt="tala-professional-award">
+                    </div>
+                    <div class="awards__item__text">
+                        <div class="awards__item_title">
+                            TALA Professional Award
+                        </div>
+                        <div class="awards__item_description">
+                            <strong>
+                                2014
+                            </strong>
+                            <strong>
+                                Баан Плай Хад Саншири
+                            </strong>
+                            <span>
+                                Резиденция
+                            </span>
+                        </div>
+                    </div>
+                </li>
+                <li class="awards__item">
+                    <div class="awards__item_image">
+                        <img src="/img/asia-pacific-hotel-awards.png" alt="asia-pacific-hotel-awards">
+                    </div>
+                    <div class="awards__item__text">
+                        <div class="awards__item_title">
+                            ASIA Pacific Hotel Awards
+                        </div>
+                        <div class="awards__item_description">
+                            <strong>
+                                2013-2014
+                            </strong>
+                            <strong>
+                                Каса Де Ла Флора
+                            </strong>
+                            <span>
+                                Госпиталь
+                            </span>
+                        </div>
+                    </div>
+                </li>
+                <li class="awards__item">
+                    <div class="awards__item_image">
+                        <img src="/img/tala-honor.png" alt="tala-honor">
+                    </div>
+                    <div class="awards__item__text">
+                        <div class="awards__item_title">
+                            TALA Honor
+                        </div>
+                        <div class="awards__item_description">
+                            <strong>
+                                2016
+                            </strong>
+                            <strong>
+                                Ад Либ Отель
+                            </strong>
+                            <span>
+                                Госпиталь
+                            </span>
+                        </div>
+                    </div>
+                </li>
+                <li class="awards__item">
+                    <div class="awards__item_image">
+                        <img src="/img/tala-professional-award-honor.png" alt="tala-professional-award-honor">
+                    </div>
+                    <div class="awards__item__text">
+                        <div class="awards__item_title">
+                            TALA Professional Award
+                            Honor
+                        </div>
+                        <div class="awards__item_description">
+                            <strong>
+                                2016
+                            </strong>
+                            <strong>
+                                J Резиденция
+                            </strong>
+                            <span>
+                                Частные апартаменты
+                            </span>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="products">
+        <div class="section__title products__title">
+            <div class="section__title_line"></div>
+            <h2 class="products__h2">
+                Блог
+            </h2>
+        </div>
+        <ul class="products__list">
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
+                        <img src="/img/image-49.png" alt="Сад в природном стиле">
+                    </div>
+                    <div class="products__item_title">
+                        Сад в природном стиле: nature garden на пике популярности
+                    </div>
+                    <div class="products__item_description">
+                        <p>
+                            Сад, который выглядит как островок дикой природы и не требует трудоемкого ухода? Это стиль
+                            nature garden, придуманный...
+                        </p>
+                        <p>
+                            Июнь 22, 2022
+                        </p>
+                    </div>
+                </a>
+            </li>
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
+                        <img src="/img/image-51.png" alt="Сад как продолжение дома">
+                    </div>
+                    <div class="products__item_title">
+                        Сад как продолжение дома
+                    </div>
+                    <div class="products__item_description">
+                        <p>
+                            Сад как продолжение дома – один из вариантов внешнего благоустройства придомовой территории
+                            в современном дизайне...
+                        </p>
+                        <p>
+                            Июнь 22, 2022
+                        </p>
+                    </div>
+                </a>
+            </li>
+            <li class="products__item">
+                <a class="products__item_inner" href="">
+                    <div class="products__item_image">
+                        <img src="/img/image-52.png" alt="Крупномеры">
+                    </div>
+                    <div class="products__item_title">
+                        Крупномеры
+                    </div>
+                    <div class="products__item_description">
+                        <p>
+                            Содержание: Благоустройство участка в лесу, рекомендации по строительству, восстановительные
+                            мероприятия «Свой лес»...
+                        </p>
+                        <p>
+                            Июнь 22, 2022
+                        </p>
+                    </div>
+                </a>
+            </li>
+        </ul>
+        <a class="products__button button" href="">
+            Читать все статьи
+        </a>
+    </section>
+</div>
+
+<section class="clients">
+    <div class="container">
+        <div class="section__title clients__title">
+            <div class="section__title_line"></div>
+            <h2 class="clients__h2">
+                Отзывы клиентов
+            </h2>
+        </div>
+        <ul class="clients__list">
+            <li class="clients__item">
+                <a class="clients__item_href" href="">
+                    <div class="clients__item_image">
+                        <img src="/img/pic.png" alt="Пик">
+                    </div>
+                </a>
+            </li>
+            <li class="clients__item">
+                <a class="clients__item_href" href="">
+                    <div class="clients__item_image">
+                        <img src="/img/studio-arcanika.png" alt="Studio arcanika">
+                    </div>
+                </a>
+            </li>
+            <li class="clients__item">
+                <a class="clients__item_href" href="">
+                    <div class="clients__item_image">
+                        <img src="/img/mindset.png" alt="MindSet">
+                    </div>
+                </a>
+            </li>
+            <li class="clients__item">
+                <a class="clients__item_href" href="">
+                    <div class="clients__item_image">
+                        <img src="/img/apex-project-bureau.png" alt="Apex project bureau">
+                    </div>
+                </a>
+            </li>
+            <li class="clients__item">
+                <a class="clients__item_href" href="">
+                    <div class="clients__item_image">
+                        <img src="/img/march.png" alt="Марш архитектурная школа">
+                    </div>
+                </a>
+            </li>
+            <li class="clients__item">
+                <a class="clients__item_href" href="">
+                    <div class="clients__item_image">
+                        <img src="/img/druzhba.png" alt="Дружба">
+                    </div>
+                </a>
+            </li>
+        </ul>
+    </div>
+</section>
+
+<div class="container">
+    <div class="question-form">
+        <div class="section__title question-form__title">
+            <div class="section__title_line"></div>
+            <h2 class="question-form__h2">
+                Остались вопросы?
+            </h2>
+        </div>
+        <div class="question-form__subtitle">
+            Задайте их по номеру телефона +7 (495) 000-00-00 или оставте свои контакты и наш менеджер перезвонит Вам через 10 минут
+        </div>
+        <div class="question-form__content">
+            <div class="question-form__content_left">
+                <div class="question-form__inputs">
+                    <input class="question-form__input input" type="text" placeholder="Имя">
+                    <input class="question-form__input input" type="tel" placeholder="Телефон">
+                    <input class="question-form__input input" type="email" placeholder="E-mail">
+                    <textarea class="question-form__textarea question-form__input input" placeholder="Ваш вопрос"></textarea>
+                </div>
+                <a class="question-form__agree">
+                    Нажимая «Оставить завку», я соглашаюсь c обработкой персональных данных на условиях Политики конфиденциальности.
+                </a>
+                <button class="question-form__button button">
+                    Оставить заявку
+                </button>
+            </div>
+            <div class="question-form__content_right">
+                <a class="question-form__address a">
+                    Приезжайте, все покажем и подробно расскажем г. Москва, ул. Садовая, д. 35
+                </a>
+                <div class="question-form__map">
+                    <div class="question-form__map_line"></div>
+                    <div class="question-form__map_inner">
+                        <img src="/img/map.png" alt="">
+                    </div>
+                    <div class="question-form__map_line _2"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 @@include('../layout/footer.html')
