--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -701,6 +701,177 @@
             Скачать каталог
         </a>
     </section>
+
+    <section class="popular">
+        <div class="section__title popular__title">
+            <div class="section__title_line"></div>
+            <h2 class="popular__h2">
+                Популярные растения
+            </h2>
+        </div>
+        <div class="popular__products">
+            <div class="popular__arrow">
+                <svg width="3.5rem" height="0.81rem" viewBox="0 0 56 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1 6.5L8.92793 1V6.5V12L1 6.5Z" fill="var(--second-color)" />
+                    <path d="M8.92793 6.5V12L1 6.5L8.92793 1V6.5ZM8.92793 6.5H56" stroke="var(--second-color)" />
+                </svg>
+            </div>
+            <div class="popular__list">
+                <ul class="popular__list_inner" style="--transform-x: 0%;">
+                    <li class="popular__item">
+                        <div class="popular__item_favorite">
+                            <svg width="1.69rem" height="1.6rem" viewBox="0 0 27 26" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M3.07844 14.4388L11.2717 23.528C12.4632 24.8498 14.5368 24.8498 15.7283 23.528L23.9216 14.4388C26.6928 11.3645 26.6928 6.38003 23.9216 3.30573C21.1503 0.231423 16.6572 0.231425 13.886 3.30573V3.30573C13.6796 3.53469 13.3204 3.53469 13.114 3.30573V3.30573C10.3428 0.231425 5.84969 0.231424 3.07844 3.30573C0.307187 6.38003 0.307189 11.3645 3.07844 14.4388Z"
+                                    stroke="var(--third-color)" stroke-width="2" />
+                            </svg>
+                        </div>
+                        <div class="popular__item_image">
+                            <img src="/img/hawthorn-common.png" alt="Боярышник обыкновенный">
+                        </div>
+                        <div class="popular__item_content">
+                            <div class="popular__item_flex">
+                                <div class="popular__item_article">
+                                    Артикул: Я00097
+                                </div>
+                                <div class="popular__item_raiting">
+                                    <svg width="1.87rem" height="1.75rem" viewBox="0 0 30 28" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M15 0L18.3677 10.3647H29.2658L20.4491 16.7705L23.8168 27.1353L15 20.7295L6.18322 27.1353L9.55093 16.7705L0.734152 10.3647H11.6323L15 0Z"
+                                            fill="#FFD340" />
+                                    </svg>
+                                    <span>
+                                        5
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="popular__item_title">
+                                Боярышник обыкновенный
+                            </div>
+                            <div class="popular__item_price">
+                                Цена: 8 100 ₽
+                            </div>
+                            <div class="popular__item_flex">
+                                <button class="popular__item_card-add button">
+                                    В корзину
+                                </button>
+                                <svg width="1.87rem" height="1.87rem" viewBox="0 0 30 30" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M16.5 9.20526C17.775 8.73158 18.795 7.6579 19.245 6.31579H24L19.5 17.3684C19.5 19.9895 21.855 22.1053 24.75 22.1053C27.645 22.1053 30 19.9895 30 17.3684L25.5 6.31579H28.5V3.15789H19.245C18.63 1.31053 16.965 0 15 0C13.035 0 11.37 1.31053 10.755 3.15789H1.5V6.31579H4.5L0 17.3684C0 19.9895 2.355 22.1053 5.25 22.1053C8.145 22.1053 10.5 19.9895 10.5 17.3684L6 6.31579H10.755C11.205 7.6579 12.225 8.73158 13.5 9.20526V26.8421H0V30H30V26.8421H16.5V9.20526ZM27.555 17.3684H21.945L24.75 10.4842L27.555 17.3684ZM8.055 17.3684H2.445L5.25 10.4842L8.055 17.3684ZM15 6.31579C14.175 6.31579 13.5 5.60526 13.5 4.73684C13.5 3.86842 14.175 3.15789 15 3.15789C15.825 3.15789 16.5 3.86842 16.5 4.73684C16.5 5.60526 15.825 6.31579 15 6.31579Z"
+                                        fill="var(--second-color)" />
+                                </svg>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="popular__item">
+                        <div class="popular__item_favorite">
+                            <svg width="1.69rem" height="1.6rem" viewBox="0 0 27 26" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M3.07844 14.4388L11.2717 23.528C12.4632 24.8498 14.5368 24.8498 15.7283 23.528L23.9216 14.4388C26.6928 11.3645 26.6928 6.38003 23.9216 3.30573C21.1503 0.231423 16.6572 0.231425 13.886 3.30573V3.30573C13.6796 3.53469 13.3204 3.53469 13.114 3.30573V3.30573C10.3428 0.231425 5.84969 0.231424 3.07844 3.30573C0.307187 6.38003 0.307189 11.3645 3.07844 14.4388Z"
+                                    stroke="var(--third-color)" stroke-width="2" />
+                            </svg>
+                        </div>
+                        <div class="popular__item_image">
+                            <img src="/img/irga-canadian-lamarck.png" alt="Ирга канадская Ламарка">
+                        </div>
+                        <div class="popular__item_content">
+                            <div class="popular__item_flex">
+                                <div class="popular__item_article">
+                                    Артикул 555
+                                </div>
+                                <div class="popular__item_raiting">
+                                    <svg width="1.87rem" height="1.75rem" viewBox="0 0 30 28" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M15 0L18.3677 10.3647H29.2658L20.4491 16.7705L23.8168 27.1353L15 20.7295L6.18322 27.1353L9.55093 16.7705L0.734152 10.3647H11.6323L15 0Z"
+                                            fill="#FFD340" />
+                                    </svg>
+                                    <span>
+                                        5
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="popular__item_title">
+                                Ирга канадская Ламарка шар на штамбе
+                            </div>
+                            <div class="popular__item_price">
+                                Цена: 77 777 ₽
+                            </div>
+                            <div class="popular__item_flex">
+                                <button class="popular__item_card-add button">
+                                    В корзину
+                                </button>
+                                <svg width="1.87rem" height="1.87rem" viewBox="0 0 30 30" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M16.5 9.20526C17.775 8.73158 18.795 7.6579 19.245 6.31579H24L19.5 17.3684C19.5 19.9895 21.855 22.1053 24.75 22.1053C27.645 22.1053 30 19.9895 30 17.3684L25.5 6.31579H28.5V3.15789H19.245C18.63 1.31053 16.965 0 15 0C13.035 0 11.37 1.31053 10.755 3.15789H1.5V6.31579H4.5L0 17.3684C0 19.9895 2.355 22.1053 5.25 22.1053C8.145 22.1053 10.5 19.9895 10.5 17.3684L6 6.31579H10.755C11.205 7.6579 12.225 8.73158 13.5 9.20526V26.8421H0V30H30V26.8421H16.5V9.20526ZM27.555 17.3684H21.945L24.75 10.4842L27.555 17.3684ZM8.055 17.3684H2.445L5.25 10.4842L8.055 17.3684ZM15 6.31579C14.175 6.31579 13.5 5.60526 13.5 4.73684C13.5 3.86842 14.175 3.15789 15 3.15789C15.825 3.15789 16.5 3.86842 16.5 4.73684C16.5 5.60526 15.825 6.31579 15 6.31579Z"
+                                        fill="var(--second-color)" />
+                                </svg>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="popular__item">
+                        <div class="popular__item_favorite">
+                            <svg width="1.69rem" height="1.6rem" viewBox="0 0 27 26" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M3.07844 14.4388L11.2717 23.528C12.4632 24.8498 14.5368 24.8498 15.7283 23.528L23.9216 14.4388C26.6928 11.3645 26.6928 6.38003 23.9216 3.30573C21.1503 0.231423 16.6572 0.231425 13.886 3.30573V3.30573C13.6796 3.53469 13.3204 3.53469 13.114 3.30573V3.30573C10.3428 0.231425 5.84969 0.231424 3.07844 3.30573C0.307187 6.38003 0.307189 11.3645 3.07844 14.4388Z"
+                                    stroke="var(--third-color)" stroke-width="2" />
+                            </svg>
+                        </div>
+                        <div class="popular__item_image">
+                            <img src="/img/linden-american.png" alt="Липа американская">
+                        </div>
+                        <div class="popular__item_content">
+                            <div class="popular__item_flex">
+                                <div class="popular__item_article">
+                                    Артикул: 666
+                                </div>
+                                <div class="popular__item_raiting">
+                                    <svg width="1.87rem" height="1.75rem" viewBox="0 0 30 28" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M15 0L18.3677 10.3647H29.2658L20.4491 16.7705L23.8168 27.1353L15 20.7295L6.18322 27.1353L9.55093 16.7705L0.734152 10.3647H11.6323L15 0Z"
+                                            fill="#FFD340" />
+                                    </svg>
+                                    <span>
+                                        5
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="popular__item_title">
+                                Липа американская шар на штамбе
+                            </div>
+                            <div class="popular__item_price">
+                                Цена: 66 666 ₽
+                            </div>
+                            <div class="popular__item_flex">
+                                <button class="popular__item_card-add button">
+                                    В корзину
+                                </button>
+                                <svg width="1.87rem" height="1.87rem" viewBox="0 0 30 30" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M16.5 9.20526C17.775 8.73158 18.795 7.6579 19.245 6.31579H24L19.5 17.3684C19.5 19.9895 21.855 22.1053 24.75 22.1053C27.645 22.1053 30 19.9895 30 17.3684L25.5 6.31579H28.5V3.15789H19.245C18.63 1.31053 16.965 0 15 0C13.035 0 11.37 1.31053 10.755 3.15789H1.5V6.31579H4.5L0 17.3684C0 19.9895 2.355 22.1053 5.25 22.1053C8.145 22.1053 10.5 19.9895 10.5 17.3684L6 6.31579H10.755C11.205 7.6579 12.225 8.73158 13.5 9.20526V26.8421H0V30H30V26.8421H16.5V9.20526ZM27.555 17.3684H21.945L24.75 10.4842L27.555 17.3684ZM8.055 17.3684H2.445L5.25 10.4842L8.055 17.3684ZM15 6.31579C14.175 6.31579 13.5 5.60526 13.5 4.73684C13.5 3.86842 14.175 3.15789 15 3.15789C15.825 3.15789 16.5 3.86842 16.5 4.73684C16.5 5.60526 15.825 6.31579 15 6.31579Z"
+                                        fill="var(--second-color)" />
+                                </svg>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="popular__arrow _right">
+                <svg width="3.5rem" height="0.81rem" viewBox="0 0 56 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M55 6.5L47.0721 1V6.5V12L55 6.5Z" fill="var(--second-color)" />
+                    <path d="M47.0721 6.5V12L55 6.5L47.0721 1V6.5ZM47.0721 6.5H0" stroke="var(--second-color)" />
+                </svg>
+            </div>
+        </div>
+    </section>
 </div>
 
 <section class="reviews">
@@ -1093,7 +1264,8 @@
             </h2>
         </div>
         <div class="question-form__subtitle">
-            Задайте их по номеру телефона +7 (495) 000-00-00 или оставте свои контакты и наш менеджер перезвонит Вам через 10 минут
+            Задайте их по номеру телефона +7 (495) 000-00-00 или оставте свои контакты и наш менеджер перезвонит Вам
+            через 10 минут
         </div>
         <div class="question-form__content">
             <div class="question-form__content_left">
@@ -1101,10 +1273,12 @@
                     <input class="question-form__input input" type="text" placeholder="Имя">
                     <input class="question-form__input input" type="tel" placeholder="Телефон">
                     <input class="question-form__input input" type="email" placeholder="E-mail">
-                    <textarea class="question-form__textarea question-form__input input" placeholder="Ваш вопрос"></textarea>
+                    <textarea class="question-form__textarea question-form__input input"
+                        placeholder="Ваш вопрос"></textarea>
                 </div>
                 <a class="question-form__agree">
-                    Нажимая «Оставить завку», я соглашаюсь c обработкой персональных данных на условиях Политики конфиденциальности.
+                    Нажимая «Оставить завку», я соглашаюсь c обработкой персональных данных на условиях Политики
+                    конфиденциальности.
                 </a>
                 <button class="question-form__button button">
                     Оставить заявку
