--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1256,7 +1256,7 @@
 </section>
 
 <div class="container">
-    <div class="question-form">
+    <section class="question-form">
         <div class="section__title question-form__title">
             <div class="section__title_line"></div>
             <h2 class="question-form__h2">
@@ -1297,7 +1297,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 </div>
 
 @@include('../layout/footer.html')
