--- a/app/pages/services-select.html
+++ b/app/pages/services-select.html
@@ -2,15 +2,15 @@
 "title": "Ландшафт"
 })
 
-<div class="container">
-    <section class="products">
-        <div class="section__title products__title mb-2-25-rem">
-            <div class="section__title_line"></div>
-            <h2 class="products__h2">
+<section class="portfolio">
+    <div class="container">
+        <div class="portfolio__title section__title">
+            <div class="portfolio__title_line section__title_line"></div>
+            <h2 class="section__title_h2">
                 Озеленение участка
             </h2>
         </div>
-        <ul class="products__switches button-switches">
+        <ul class="portfolio__links button-switches">
             <li class="button-switch">
                 <button class="button-switch_button button">
                     Ландшафтный дизайн парков
@@ -57,126 +57,150 @@
                 </button>
             </li>
         </ul>
-        <ul class="products__list">
-            <li class="products__item">
-                <a class="products__item_inner" href="">
-                    <div class="products__item_image">
-                        <img src="/img/garden-care-products.png" alt="Услуги по уходу за садом">
-                    </div>
-                    <div class="products__item_title">
-                        Услуги по уходу за садом
-                    </div>
-                    <div class="products__item_description">
-                        Услуги по уходу за садом
-                    </div>
-                </a>
-            </li>
-            <li class="products__item">
-                <a class="products__item_inner" href="">
-                    <div class="products__item_image">
-                        <img src="/img/landscaping-site.png" alt="Озеленение участка">
-                    </div>
-                    <div class="products__item_title">
-                        Озеленение участка
-                    </div>
-                    <div class="products__item_description">
-                        Услуги по уходу за садом
-                    </div>
-                </a>
-            </li>
-            <li class="products__item">
-                <a class="products__item_inner" href="">
-                    <div class="products__item_image">
-                        <img src="/img/planting-plants.png" alt="Посадка растений">
-                    </div>
-                    <div class="products__item_title">
-                        Посадка растений
-                    </div>
-                    <div class="products__item_description">
-                        Услуги по уходу за садом
-                    </div>
-                </a>
-            </li>
-            <li class="products__item">
-                <a class="products__item_inner" href="">
-                    <div class="products__item_image">
-                        <img src="/img/garden-and-park-construction.png" alt="Садово-парковое строительство">
-                    </div>
-                    <div class="products__item_title">
-                        Садово-парковое строительство
-                    </div>
-                    <div class="products__item_description">
-                        Услуги по уходу за садом
-                    </div>
-                </a>
-            </li>
-            <li class="products__item">
-                <a class="products__item_inner" href="">
-                    <div class="products__item_image">
-                        <img src="/img/landscape-construction.png" alt="Ландшафтное строительство">
-                    </div>
-                    <div class="products__item_title">
-                        Ландшафтное строительство
-                    </div>
-                    <div class="products__item_description">
-                        Услуги по уходу за садом
-                    </div>
-                </a>
-            </li>
-            <li class="products__item">
-                <a class="products__item_inner" href="">
-                    <div class="products__item_image">
-                        <img src="/img/landscape-design.png" alt="Ландшафтный дизайн">
-                    </div>
-                    <div class="products__item_title">
-                        Ландшафтный дизайн
-                    </div>
-                    <div class="products__item_description">
-                        Услуги по уходу за садом
-                    </div>
-                </a>
-            </li>
-            <li class="products__item">
-                <a class="products__item_inner" href="">
-                    <div class="products__item_image">
-                        <img src="/img/landscape-designing.png" alt="Ландшафтное проектирование">
-                    </div>
-                    <div class="products__item_title">
-                        Ландшафтное проектирование
-                    </div>
-                    <div class="products__item_description">
-                        Услуги по уходу за садом
-                    </div>
-                </a>
-            </li>
-            <li class="products__item">
-                <a class="products__item_inner" href="">
-                    <div class="products__item_image">
-                        <img src="/img/equipment-design.png" alt="Оснащение дизайн">
-                    </div>
-                    <div class="products__item_title">
-                        Оснащение дизайн
-                    </div>
-                    <div class="products__item_description">
-                        Услуги по уходу за садом
-                    </div>
-                </a>
-            </li>
-            <li class="products__item">
-                <a class="products__item_inner" href="">
-                    <div class="products__item_image">
-                        <img src="/img/growing-fauna.png" alt="Выращивание фауны">
-                    </div>
-                    <div class="products__item_title">
-                        Выращивание фауны
-                    </div>
-                    <div class="products__item_description">
-                        Услуги по уходу за садом
-                    </div>
-                </a>
-            </li>
-        </ul>
-    </section>
+    </div>
+    <ul class="portfolio__projects">
+        <li class="portfolio__project">
+            <div class="portfolio__project_image">
+                <img src="/img/landscaping-site1.png" alt="Озеленение участка">
+            </div>
+            <h3 class="portfolio__project_title">
+                Озеленение участка
+            </h3>
+        </li>
+    </ul>
+</section>
+
+<div class="container">
+    <div class="info">
+        <div class="info__left">
+            <div class="info__short">
+                <ul class="info__list-text">
+                    <li class="info__list-text_item">
+                        Предварительная консультация
+                    </li>
+                    <li class="info__list-text_item">
+                        Выезд на объект
+                    </li>
+                    <li class="info__list-text_item">
+                        Топографическая съемка
+                    </li>
+                    <li class="info__list-text_item">
+                        Создание проекта
+                    </li>
+                    <li class="info__list-text_item">
+                        Предоставление нормативного акта
+                    </li>
+                </ul>
+                <div class="info__price">
+                    Цена от 70 000 рублей
+                </div>
+                <div class="info__hint">
+                    *Точную стоимость услуги рассчитаем бесплатно по Вашей заявке
+                </div>
+            </div>
+            <div class="info__image">
+                <img src="/img/landscaping-site2.png" alt="">
+            </div>
+        </div>
+        <div class="info__right">
+            <p>
+                Устали от бетона городских улиц, не хватает свежего воздуха, красоты цветочных клумб и шелеста листвы,
+                выход есть. Предлагаем комплекс мероприятий – наши специалисты готовы разработать уникальный план
+                озеленения с учетом геофизических особенностей земельного участка как в черте города, так и за его
+                пределами.
+            </p>
+            <div class="info__text">
+                <div class="info__title">
+                    «Ландшафтный дом» — озеленение участков под ключ
+                </div>
+                <div class="info__description">
+                    <p>
+                        Устали от бетона городских улиц, не хватает свежего воздуха, красоты цветочных клумб и шелеста
+                        листвы,
+                        выход есть. Предлагаем комплекс мероприятий – наши специалисты готовы разработать уникальный
+                        план
+                        озеленения с учетом геофизических особенностей земельного участка как в черте города, так и за
+                        его
+                        пределами.
+                    </p>
+                    <p>
+                        С каждым заказчиком подписывается официальный договор на дизайн объекта, в котором закрепляется
+                        конкретный перечень работ по комплексному благоустройству. В процессе заказа мы выполняем
+                        перечень
+                        работ:
+                    </p>
+                    <ul class="info__list-text">
+                        <li class="info__list-text_item">
+                            разработка ландшафтного дизайна и благоустройства территории, с подробной разработкой
+                            дендроплана;
+                        </li>
+                        <li class="info__list-text_item">
+                            установка на территории системы полива (автополив), с прокладкой необходимых инженерных
+                            коммуникаций;
+                        </li>
+                        <li class="info__list-text_item">
+                            укладка рулонного газона с первичной стрижкой при необходимости;
+                        </li>
+                        <li class="info__list-text_item">
+                            завоз плодородного слоя. Если есть необходимость, производится очистка от пней, травы,
+                            мусора,
+                            подготовка площадки к работам, спил погибших деревьев;
+                        </li>
+                        <li class="info__list-text_item">
+                            создание живой изгороди, цветников, альпинариев, рокариев, альпийских горок, розария, посев
+                            семян;
+                        </li>
+                        <li class="info__list-text_item">
+                            посадка садовых растений, огорода, крупномеров , устройство подпорных элементов и другие
+                            земляные
+                            работы;
+                        </li>
+                        <li class="info__list-text_item">
+                            монтаж освещения ключевых зон: беседок, водоемов, дорожек, зоны барбекю;
+                        </li>
+                        <li class="info__list-text_item">
+                            обработка участка от вредителей, гербицидами;
+                        </li>
+                        <li class="info__list-text_item">
+                            строительство и благоустройство декоративных водоемов с подбором оборудования для системы
+                            подачи
+                            воды и
+                            ее фильтрации;
+                        </li>
+                        <li class="info__list-text_item">
+                            обрезка живых изгородей, кустов;
+                        </li>
+                        <li class="info__list-text_item">
+                            дорожки: мощение дорожек брусчаткой, декорирование природным камнем, укладка тротуарной
+                            плитки,
+                            заливка
+                            бетонных дорожек, покрытие земли гравием;
+                        </li>
+                        <li class="info__list-text_item">
+                            залив бетонного фундамента и благоустройство капитальных построек, мангальной зоны;
+                        </li>
+                        <li class="info__list-text_item">
+                            проведение работ с возможностью выравнивания рельефа;
+                        </li>
+                        <li class="info__list-text_item">
+                            озеленение приусадебных участков любой площади плодовыми, лиственными, хвойными деревьями,
+                            кустарниками
+                            и цветами.
+                        </li>
+                    </ul>
+                    <p>
+                        Мы готовы выполнить любое поручение клиента по благоустройству. Первичная консультация позволяет
+                        определить перечень задач, которые предстоит выполнить сотрудникам агентства. В сроки,
+                        оговоренные с
+                        заказчиком, будет выполнен весь объем работ с гарантией качества.
+                    </p>
+                </div>
+            </div>
+            <button class="info__button button">
+                Оставить заявку
+            </button>
+        </div>
+    </div>
 
     <section class="stages-work">
         <div class="stages-work__title section__title">
@@ -235,6 +259,50 @@
         <a class="stages-work__order button" href="">
             Заказать проект
         </a>
+    </section>
+
+    <section class="price">
+        <div class="price__title section__title">
+            <div class="price__title_line section__title_line"></div>
+            <h2 class="section__title_h2">
+                Цены на ландшафтные услуги
+            </h2>
+        </div>
+        <ol class="price__list">
+            <li class="price__item">
+                <div class="price__item_show">
+                    <div class="price__item_title">
+                        Название услуги ландшафтного дома
+                        <div class="price__item_line"></div>
+                    </div>
+                    <div class="price__item_cost">
+                        от 50 000 рублей
+                    </div>
+                    <div class="price__item_switch"></div>
+                </div>
+                <div class="price__item_hide"></div>
+            </li>
+            <li class="price__item">
+                <div class="price__item_show">
+                    <div class="price__item_title">
+                        Название услуги ландшафтного дома
+                        <div class="price__item_line"></div>
+                    </div>
+                    <div class="price__item_cost">
+                        от 500 000 рублей
+                    </div>
+                    <div class="price__item_switch"></div>
+                </div>
+                <div class="price__item_hide"></div>
+            </li>
+        </ol>
+        <button class="price__button button">
+            Заказать рассчет
+        </button>
+        <div class="price__hint">
+            * Указанные цены не являются публичной офертой. Уточнить наличие и стоимость продукции на текущий день можно
+            у наших менеджеров по контактным телефонам или с помощью формы обратной связи.
+        </div>
     </section>
 
     <section class="substrate-form">
