--- a/app/pages/services-select.html
+++ b/app/pages/services-select.html
@@ -1,5 +1,6 @@
 @@include('../layout/header.html', {
-"title": "Ландшафт"
+"title": "Ландшафт",
+"switch": '<ul class=\"header__switch\">\n    <li class=\"header__switch_item\">\n        <a class=\"header__switch_item_href\" href=\"/\">\n            Главная\n        </a>\n    </li>\n    <li class=\"header__switch_item\">\n        <a class=\"header__switch_item_href\" href=\"/\">\n            Услуги\n        </a>\n    </li>\n    <li class=\"header__switch_item\">\n        <a class=\"header__switch_item_href\" href=\"/\">\n            Озеленение участка\n        </a>\n    </li>\n</ul>'
 })
 
 <section class="portfolio">
