--- a/app/pages/payment.html
+++ b/app/pages/payment.html
@@ -58,6 +58,9 @@
                 Оплата
             </h2>
         </div>
+        <div class="awards__subtitle">
+            Компания “Ландшафтный Дом” делает все для безопасности и экономии драгоценного времени наших клиентов. Мы предлагаем самые быстрые и безопасные решения по оплате наших услуг, а также наилучшие решения любых споров.
+        </div>
         <div class="awards__list">
             <ul class="awards__list_inner">
                 <li class="awards__item">
@@ -115,6 +118,9 @@
             <h2 class="awards__h2">
                 Порядок возврата денежных средств
             </h2>
+        </div>
+        <div class="awards__subtitle">
+            Мы всегда заботимся об безопасности, анонимности и комфорте наших клиентов. Мы предлагаем самые быстрые и качественные способы решения любых споров и возвратов денежных сресдтв.
         </div>
         <div class="awards__list">
             <ul class="awards__list_inner">
