--- a/app/pages/services-select.html
+++ b/app/pages/services-select.html
@@ -858,48 +858,7 @@
 </section>
 
 <div class="container">
-    <section class="question-form">
-        <div class="section__title question-form__title">
-            <div class="section__title_line"></div>
-            <h2 class="question-form__h2">
-                Остались вопросы?
-            </h2>
-        </div>
-        <div class="question-form__subtitle">
-            Задайте их по номеру телефона +7 (495) 000-00-00 или оставте свои контакты и наш менеджер перезвонит Вам
-            через 10 минут
-        </div>
-        <div class="question-form__content">
-            <div class="question-form__content_left">
-                <div class="question-form__inputs">
-                    <input class="question-form__input input" type="text" placeholder="Имя">
-                    <input class="question-form__input input" type="tel" placeholder="Телефон">
-                    <input class="question-form__input input" type="email" placeholder="E-mail">
-                    <textarea class="question-form__textarea question-form__input input"
-                        placeholder="Ваш вопрос"></textarea>
-                </div>
-                <a class="question-form__agree">
-                    Нажимая «Оставить завку», я соглашаюсь c обработкой персональных данных на условиях Политики
-                    конфиденциальности.
-                </a>
-                <button class="question-form__button button">
-                    Оставить заявку
-                </button>
-            </div>
-            <div class="question-form__content_right">
-                <a class="question-form__address a">
-                    Приезжайте, все покажем и подробно расскажем г. Москва, ул. Садовая, д. 35
-                </a>
-                <div class="question-form__map">
-                    <div class="question-form__map_line"></div>
-                    <div class="question-form__map_inner">
-                        <img src="/img/map.png" alt="">
-                    </div>
-                    <div class="question-form__map_line _2"></div>
-                </div>
-            </div>
-        </div>
-    </section>
+    @@include('../sections/question-form.html')
 </div>
 
 @@include('../layout/footer.html')
