--- a/app/pages/awards.html
+++ b/app/pages/awards.html
@@ -1,6 +1,6 @@
 @@include('../layout/header.html', {
 "title": "Ландшафт",
-"switch": ""
+"switch": '<ul class=\"header__switch\"><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Главная</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">О компании</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Награды</a></li></ul>'
 })
 
 <div class="container">
@@ -129,21 +129,9 @@
                 </li>
             </ul>
         </div>
-    </section>
 
-    <section class="question-form">
-        <div class="section__title question-form__title">
-            <div class="section__title_line"></div>
-            <h2 class="question-form__h2">
-                Остались вопросы?
-            </h2>
-        </div>
-        <div class="question-form__subtitle">
-            Задайте их по номеру телефона +7 (495) 000-00-00 или оставте свои контакты и наш менеджер перезвонит Вам
-            через 10 минут
-        </div>
         <div class="question-form__content">
-            <div class="question-form__content_left">
+            <form class="question-form__content_left" method="POST">
                 <div class="question-form__inputs">
                     <input class="question-form__input input" type="text" placeholder="Имя">
                     <input class="question-form__input input" type="tel" placeholder="Телефон">
@@ -158,7 +146,7 @@
                 <button class="question-form__button button">
                     Оставить заявку
                 </button>
-            </div>
+            </form>
             <div class="question-form__content_right">
                 <a class="question-form__address a">
                     Приезжайте, все покажем и подробно расскажем г. Москва, ул. Садовая, д. 35
@@ -173,6 +161,8 @@
             </div>
         </div>
     </section>
+
+    @@include('../sections/question-form.html')
 </div>
 
 @@include('../layout/footer.html')
