--- a/app/pages/services-select.html
+++ b/app/pages/services-select.html
@@ -72,7 +72,7 @@
 </section>
 
 <div class="container">
-    <div class="info">
+    <section class="info">
         <div class="info__left">
             <div class="info__short">
                 <ul class="info__list-text">
@@ -201,7 +201,7 @@
                 Оставить заявку
             </button>
         </div>
-    </div>
+    </section>
 
     <section class="stages-work">
         <div class="stages-work__title section__title">
