--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -577,7 +577,7 @@
     </section>
 </div>
 
-<div class="advantages">
+<section class="advantages">
     <div class="container">
         <div class="advantages__container">
             <div class="advantages__title section__title">
@@ -608,7 +608,7 @@
             </div>
         </div>
     </div>
-</div>
+</section>
 
 <div class="container">
     <section class="products">
