--- a/app/pages/catalog.html
+++ b/app/pages/catalog.html
@@ -13,7 +13,7 @@
         </div>
         <ul class="products__list">
             <li class="products__item">
-                <a class="products__item_inner" href="">
+                <a class="products__item_inner" href="/catalog-select.html">
                     <div class="products__item_image">
                         <img src="/img/garden-care-products.png" alt="Услуги по уходу за садом">
                     </div>
@@ -26,7 +26,7 @@
                 </a>
             </li>
             <li class="products__item">
-                <a class="products__item_inner" href="">
+                <a class="products__item_inner" href="/catalog-select.html">
                     <div class="products__item_image">
                         <img src="/img/landscaping-site.png" alt="Озеленение участка">
                     </div>
@@ -39,7 +39,7 @@
                 </a>
             </li>
             <li class="products__item">
-                <a class="products__item_inner" href="">
+                <a class="products__item_inner" href="/catalog-select.html">
                     <div class="products__item_image">
                         <img src="/img/planting-plants.png" alt="Посадка растений">
                     </div>
@@ -52,7 +52,7 @@
                 </a>
             </li>
             <li class="products__item">
-                <a class="products__item_inner" href="">
+                <a class="products__item_inner" href="/catalog-select.html">
                     <div class="products__item_image">
                         <img src="/img/garden-and-park-construction.png" alt="Садово-парковое строительство">
                     </div>
@@ -65,7 +65,7 @@
                 </a>
             </li>
             <li class="products__item">
-                <a class="products__item_inner" href="">
+                <a class="products__item_inner" href="/catalog-select.html">
                     <div class="products__item_image">
                         <img src="/img/landscape-construction.png" alt="Ландшафтное строительство">
                     </div>
@@ -78,7 +78,7 @@
                 </a>
             </li>
             <li class="products__item">
-                <a class="products__item_inner" href="">
+                <a class="products__item_inner" href="/catalog-select.html">
                     <div class="products__item_image">
                         <img src="/img/growing-fauna.png" alt="Выращивание фауны">
                     </div>
